---
source: tests/tests.rs
expression: "test_util(path, false, false, false)"

---
fun f ()  {
	(let a = #123)
	($a).mem
	($a)[#123]
	($a).mem[#123].b
	($a)[(#3 + #2)]
	($a)[($b).xy]
	Err
}
fun g ()  {
	(let a = #0)
	(let b = #0)
	(($a).m + ($b).m)
	(($a)[#1] - ($b)[#1])
	(($a).m[#1] * ($b)[#1].m)
}

===
Expected identifier after the dot operator. [107..110]
